Day 11 Stage 2 completed, Day 9 test refactoring